--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -617,7 +617,7 @@ We follow a similar training setup for the three attention based models, to the 
 
 For Model 7, we use the suggested training setup that utilizes the \texttt{Adam} optimizer with a learning rate of 0.02, and train for 15 epochs (since longer training times did not lead to improved performance).
 
-In Table \@ref(tab:cv-results-attn), we show the cross-validated performance metrics of each of the models, as well as the two best performing models from the previous section. As before, we report both the root mean squared error (RMSE) and the mean absolute error (MAE). The results show that Model 5, which simply adds attention to Model 4, outperforms Model 4 on both the RMSE and MAE metrics. Thus, there is some room to argue that for tabular data modeling that uses embeddings for categorical data, the use of attention within models should be considered. Disappointingly, the TabNet architecture performs poorly, perhaps due to insufficient hyperparameter tuning, but indicating that \`\`out of the box", TabNet does not appear to work well for this modeling task. Finally, the TabTransformer model shows the best performance of all models considered in this research, beating the other models by a significant margin on both the RMSE and MAE metrics.
+In Table \@ref(tab:cv-results-attn), we show the cross-validated performance metrics of each of the models, as well as the two best performing models from the previous section. As before, we report both the root mean squared error (RMSE) and the mean absolute error (MAE). The results show that Model 5, which simply adds attention to Model 4, outperforms Model 4 on both the RMSE and MAE metrics. Thus, there is some room to argue that for tabular data modeling that uses embeddings for categorical data, the use of attention within models should be considered. The TabNet architecture performs poorly, perhaps due to insufficient hyperparameter tuning, but indicating that *out of the box*, TabNet does not appear to work well for this modeling task. Finally, the TabTransformer model shows the best performance of all models considered in this research, beating the other models by a significant margin on both the RMSE and MAE metrics.
 
 | Model                                               |   RMSE |    MAE |
 |:----------------------------------------------------|-------:|-------:|
@@ -633,7 +633,7 @@ In what follows, we focus on understanding the TabTransformer model in more deta
 
 ## Exploring the TabTransformer model
 
-Here, we explore what the TabTransformer model has learned from the data via the attention process that forms the core of the model. We focus on the difference between the flood embedding learned by the model, compared with the output of the Transformer layer that processes the embeddings before these enter the model. @Huang2020 call the latter \`\`contextual embeddings", because the attention mechanism within the TabTransformer model augments the embeddings based on the other covariates that appear for each observation $i$.
+Here, we explore what the TabTransformer model has learned from the data via the attention process that forms the core of the model. We focus on the difference between the flood embedding learned by the model, compared with the output of the Transformer layer that processes the embeddings before these enter the model. @Huang2020 call the latter *contextual embeddings*, because the attention mechanism within the TabTransformer model augments the embeddings based on the other covariates that appear for each observation $i$.
 
 To illustrate this, we selected a single TabTransformer fit on one fold of the training data, and selected at random 10 000 individual observations. For each observation, the embedding relating to the flood zone of the observation was extracted from the model, as well as the contextual embedding that was produced for that observation by the TabTransformer model. We found that a PCA and t-SNE analysis of the embeddings produced very similar results to those shown in the previous section, so we do not show these plots here. To investigate the difference between the embeddings and contextual embeddings for the `flood_zone` variable, we show the first component from a PCA analysis of each of these in Figure \@ref(fig:embd).
 
