address 'nothing more than a glm' comment

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -148,7 +148,7 @@ z^K &= \sigma(a_{K}.z^{K-1}+ b_{K}) \\
 
 where the regression parameters (weights) for each layer $k \in [1;K+1]$ are represented by the matrices $a_k$ and the intercept terms are represented by $b_k$. Whereas the calculation inside each of the layers is nothing more than linear regression, $\sigma$ represents the non-linear part of each layer. Choices for $\sigma$ are often the hyperbolic tangent (tanh) function or the rectified linear unit (ReLu) $max(0,x)$. The parameters of the network are estimated ('trained') as follows. First a loss function $L(.,.)$ is specified for the network that measures the difference between the observed data $y$ and the predictions of the network $\hat{y}$, for example, the Mean Squared Error ($(y - \hat{y})^2$). Then, the parameters of the network are changed such that the loss decreases (formally, this is done using the technique of backpropagation). Finally, training is stopped once the predictive performance of the network on unseen data is suitably good.
 
-If $K$ is set equal to $1$, then Equation \ref{NN} reduces to nothing more than a GLM. A neural network with $K=2$ is called a shallow neural network and for $K \geq 2$, the network is called a deep neural network. The matrix $X$ of data input to the network can be composed of both continuous variables as well as categorical variables, which can be pre-processed using one-hot or dummy encoding. As mentioned above, a different option is to use encodings, which we discuss in more detail next.
+If $K$ is set equal to $1$, then Equation \ref{NN} reduces to a form similar to the GLM, where $\sigma$ is analogous to the link function and $a_1X+b_1$ the linear predictor. A neural network with $K=2$ is called a shallow neural network and for $K \geq 2$, the network is called a deep neural network. The matrix $X$ of data input to the network can be composed of both continuous variables as well as categorical variables, which can be pre-processed using one-hot or dummy encoding. As mentioned above, a different option is to use encodings, which we discuss in more detail next.
 
 ### Embeddings
 
