--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -148,7 +148,7 @@ z^K &= \sigma(a_{K}.z^{K-1}+ b_{K}) \\
 
 where the regression parameters (weights) for each layer $k \in [1;K+1]$ are represented by the matrices $a_k$ and the intercept terms are represented by $b_k$. Whereas the calculation inside each of the layers is nothing more than linear regression, $\sigma$ represents the non-linear part of each layer. Choices for $\sigma$ are often the hyperbolic tangent (tanh) function or the rectified linear unit (ReLu) $max(0,x)$. The parameters of the network are estimated ('trained') as follows. First a loss function $L(.,.)$ is specified for the network that measures the difference between the observed data $y$ and the predictions of the network $\hat{y}$, for example, the Mean Squared Error ($(y - \hat{y})^2$). Then, the parameters of the network are changed such that the loss decreases (formally, this is done using the technique of backpropagation). Finally, training is stopped once the predictive performance of the network on unseen data is suitably good.
 
-If $K$ is set equal to $1$, then Equation \ref{NN} reduces to a form similar to the GLM, where $\sigma$ is analogous to the link function and $a_1X+b_1$ the linear predictor. A neural network with $K=2$ is called a shallow neural network and for $K \geq 2$, the network is called a deep neural network. The matrix $X$ of data input to the network can be composed of both continuous variables as well as categorical variables, which can be pre-processed using one-hot or dummy encoding. As mentioned above, a different option is to use encodings, which we discuss in more detail next.
+If $K$ is set equal to $1$, then Equation \ref{NN} reduces to a \textcolor{blue}{form similar to the GLM, where $\sigma$ is analogous to the link function and $a_1X+b_1$ the linear predictor.} A neural network with $K=2$ is called a shallow neural network and for $K \geq 2$, the network is called a deep neural network. The matrix $X$ of data input to the network can be composed of both continuous variables as well as categorical variables, which can be pre-processed using one-hot or dummy encoding. As mentioned above, a different option is to use encodings, which we discuss in more detail next.
 
 ### Embeddings
 
@@ -419,20 +419,13 @@ where $z_{i,j}$ represents the embedding value for $i$th instance of the categor
 
 Although, in this particular example, we incorporate one-dimensional embeddings, one can easily include multidimensional embeddings, which would increase the model's flexibility. The modeler would need to balance the potential additional lift with overfitting and some loss of interpretability, since, with one-dimensional embeddings, our GLM structure dictates that there is a monotonic relationship between the predicted response and the input embedding, which could be desirable in certain use cases (and undesirable in others.)
 
-Regardless of the hyperparameters chosen, care needs to be taken in ensuring the integrity of the model validation process, since when we train
-the embeddings, we utilize the information from the response variables. Therefore, the holdout data must not be seen by the neural network
-training process or the GLM fitting process.
+\textcolor{blue}{Regardless of the hyperparameters chosen, care needs to be taken in ensuring the integrity of the model validation process, since when we train the embeddings, we utilize the information from the response variables. Therefore, the holdout data must not be seen by the neural network training process or the GLM fitting process.}
 
-Since we only have a few parameters in this model, we exhibit the full list of fitted coefficients in Table \@ref(tab:glm2). 
-For each categorical variable, there is only one coefficient estimate. This is because each categorical variable has been replaced by a
-single scalar value, so we treat it as if it were any other continuous predictor.
+\textcolor{blue}{Since we only have a few parameters in this model, we exhibit the full list of fitted coefficients in Table} \@ref(tab:glm2). 
+\textcolor{blue}{For each categorical variable, there is only one coefficient estimate. This is because each categorical variable has been replaced by a
+single scalar value, so we treat it as if it were any other continuous predictor.}
 
-One interesting ramification of our choice of embedding dimension of 1 in this example is that we can compute the "implied relativities"
-of the factor levels in the new GLM. Since each level corresponds to a unique scalar value, we can obtain its contribution to the
-linear predictor by multiplying by the coefficient estimate of the variable. For example, multiplying the estimate of -0.075 for `occupancy_type` in
-Table \@ref(tab:glm2) by each value in Table \@ref(tab:embeddings-flood-zone), we obtain the unnormalized contributions of each level, which can
-then be exponentiated and normalized with respect to the base level `Single family residence` in order to obtain the implied relativities,
-which could then be compared with the first GLM's output in Table \@ref(tab:relativities).
+\textcolor{blue}{One interesting ramification of our choice of embedding dimension of 1 in this example is that we can compute the "implied relativities" of the factor levels in the new GLM. Since each level corresponds to a unique scalar value, we can obtain its contribution to the linear predictor by multiplying by the coefficient estimate of the variable. For example, multiplying the estimate of -0.075 for} `occupancy_type` in Table \@ref(tab:glm2) \textcolor{blue}{by each value in Table} \@ref(tab:embeddings-flood-zone), \textcolor{blue}{we obtain the unnormalized contributions of each level, which can then be exponentiated and normalized with respect to the base level} `Single family residence` \textcolor{blue}{in order to obtain the implied relativities, which could then be compared with the first GLM's output in Table} \@ref(tab:relativities).
 
 | term                                     | estimate |
 |:-----------------------------------------|---------:|
@@ -636,8 +629,8 @@ In Table \@ref(tab:cv-results-attn), we show the cross-validated performance met
 |:----------------------------------------------------|-------:|-------:|
 | Model 4: MLP with multidimensional embeddings       | 60,973 | 37,574 |
 | Model 5: Simple Attention                           | 60,601 | 36,739 |
-| Model 6: TabTransformer                             | 59,900 | 36,343 |
-| Model 7: TabNet                                     | 62,938 | 38,386 |
+| \textcolor{blue}{Model 6: TabTransformer}                             | 59,900 | 36,343 |
+| \textcolor{blue}{Model 7: TabNet}                                     | 62,938 | 38,386 |
 | Linear regression, predictions capped below at 0.01 | 60,879 | 38,431 |
 
 : (\#tab:cv-results-attn) Cross validation results for Models 5-7.
