--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -5,7 +5,7 @@ authors:
     affiliation: RStudio and Kasa AI
     email: kevinykuo@gmail.com 
   - name: Ronald Richman
-    affiliation: QED Actuaries and Consultants and University of the Witwatersrand
+    affiliation: Old Mutual Insure and University of the Witwatersrand
     email: ron@ronaldrichman.co.za
 abstract: |
   We explore in depth how categorical data can be
@@ -134,7 +134,7 @@ Having described traditional approaches for modeling categorical data, we now tu
 
 Neural networks are flexible machine learning models that have recently been applied to a number of problems with Property and Casualty (P&C) insurance. Here, we provide a brief overview of these models, and refer the reader to @Richman2018 for a more detailed overview. Neural networks are characterized by multiple layers of non-linear regression functions that are used to learn a new representation of the data input to the network that is then used to make predictions. Here we focus on the most common type of neural networks, which are fully connected networks (FCNs), which provide as the output of each set of non-linear functions to the subsequent layer of functions. Formally, a $K$-layer neural network is:
 
-
+```{=tex}
 \begin{equation} 
 \label{NN}
 \begin{split}
@@ -145,7 +145,7 @@ z^K &= \sigma(a_{K}.z^{K-1}+ b_{K}) \\
 \hat{y} &= \sigma(a_{K+1}.z^{K}+ b_{K+1}),
 \end{split}
 \end{equation}
-
+```
 where the regression parameters (weights) for each layer $k \in [1;K+1]$ are represented by the matrices $a_k$ and the intercept terms are represented by $b_k$. Whereas the calculation inside each of the layers is nothing more than linear regression, $\sigma$ represents the non-linear part of each layer. Choices for $\sigma$ are often the hyperbolic tangent (tanh) function or the rectified linear unit (ReLu) $max(0,x)$. The parameters of the network are estimated ('trained') as follows. First a loss function $L(.,.)$ is specified for the network that measures the difference between the observed data $y$ and the predictions of the network $\hat{y}$, for example, the Mean Squared Error ($(y - \hat{y})^2$). Then, the parameters of the network are changed such that the loss decreases (formally, this is done using the technique of backpropagation). Finally, training is stopped once the predictive performance of the network on unseen data is suitably good.
 
 If $K$ is set equal to $1$, then Equation \ref{NN} reduces to a \textcolor{blue}{form similar to the GLM, where $\sigma$ is analogous to the link function and $a_1X+b_1$ the linear predictor.} A neural network with $K=2$ is called a shallow neural network and for $K \geq 2$, the network is called a deep neural network. The matrix $X$ of data input to the network can be composed of both continuous variables as well as categorical variables, which can be pre-processed using one-hot or dummy encoding. As mentioned above, a different option is to use encodings, which we discuss in more detail next.
@@ -156,12 +156,12 @@ Common issues with the traditional encoding schemes for categorical data occur w
 
 An embedding layer is a neural network component which maps each level of the categorical data to a low dimensional vector of parameters that is learned together with the rest of the GLM or neural network that is used for the modeling problem. Formally, an embedding is
 
-
+```{=tex}
 \begin{equation} 
 \label{embed_map}
   z_\mathcal{P}^j : \mathcal{P}^j \to \mathbb{R}^{q_\mathcal{P}^j }, \quad \quad p^j \mapsto  z_\mathcal{P}^j(p),
 \end{equation}
-
+```
 where $q_\mathcal{P}^j$ is the dimension of the embedding for the $j$th categorical variable and $z_\mathcal{P}^j(.)$ is an implicit function that maps from the particular element of the labels $p$ to the embedding space. Equation \ref{embed_map} states that an embedding maps a level of a categorical variable to a numerical vector. This function is left implicit, meaning to say, we allow the embeddings to be derived during the process of fitting the model and do not attempt to specify exactly how the embeddings can be derived from the input data. In Table \@ref(tab:embed) we show an example of two dimensional embeddings for the state variables, where these have been generated randomly.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
@@ -300,7 +300,7 @@ The response variable we take from the dataset is "Amount Paid on Building Claim
 
 For our experiments, we set up a 5-fold cross validation scheme that is applied to each of the models we introduce. In Sections \ref{models} and \ref{interpretation}, the tables and figures are based on a single fold of the cross validation split. In Section \ref{training-inference}, we provide the cross-validated performance metrics of each of the models.
 
-We note that the focus of our contribution is on applications of categorical embeddings in predictive modeling, rather than on fine-tuning models in order to beat or establish a benchmark. To this end, we do not perform systematic hyperparameter tuning in our experiments, and the performance metrics are provided to show that reasonable models utilizing categorical embeddings can be developed. However, as we describe the modeling procedure and results, we provide commentary on recommended practices in practical applications, especially with respect to the neural network models.
+\textcolor{blue}{Whereas the main focus of our contribution} is on applications of categorical embeddings in predictive modeling, \textcolor{blue}{we have fine-tuned the neural network models in this (and the next) sections using the same 5-fold cross validation scheme described above, but applied to a separate 100k data point subsample of the FEMA data. The results of this fine-tuning are reported in detail in the appendix. The performance metrics in this, and the next, section are based on the optimal models found through this process. Our aim is thos show that reasonable models utilizing categorical embeddings can be developed quite easily. As we describe the modeling procedure and results, we provide further commentary on recommended practices in practical applications, especially with respect to the neural network models.}
 
 ## Models {#models}
 
@@ -335,12 +335,12 @@ We take the log of the continuous predictor `building_insurance_coverage`, which
 
 [^2]: <https://www.floodsmart.gov/flood-map-zone/find-yours>
 
-
+```{=tex}
 \begin{equation}
 1 + |J^{\text{num}}| + \left(\sum_{j \in J^{\text{cat}}} n_{\mathcal{P}}^j\right) - |J^{\text{cat}}|:
 (\#eq:glm1)
 \end{equation}
-
+```
 one for the intercept, one for each numeric variable, and the numbers of levels minus one (due to dummy coding) for each categorical variable.
 
 In Table \@ref(tab:relativities), we exhibit an exerpt of the relativities, or exponentiated fitted coefficients, of a couple of the categorical variables. Recall that the choice of the log link gives a multiplicative structure, so the interpretation of 1.34 for `occupancy_type = "Non-residential building"` is that, all else equal, the expected loss for a policy for a non-residential building is 1.34 times that of a policy for a single family home, which is the base, or reference, level for the factor.
@@ -362,7 +362,7 @@ In Table \@ref(tab:relativities), we exhibit an exerpt of the relativities, or e
 
 ### Model 2: Neural Network with Unidimensional Embeddings
 
-For Model 2, we build a feedforward neural network, whose architecture is shown in Figure \@ref(fig:nn-1). The categorical inputs go through one-dimensional embedding layers where they are each mapped to a scalar. The embeddings are then concatenated with the numeric predictors, which have been normalized in data pre-processing, before being passed through a feedforward layer (with 8 hidden units and ReLU activation) to obtain a scalar value between 0 and 1, as constrained by a sigmoid output activation. This scalar output represents the proportion of coverage amount that is paid out, which we then multiply by the dollar amount of the coverage amount to obtain our prediction of the claims paid. For optimization, we use the mean squared error (MSE) loss function.
+For Model 2, we build a feedforward neural network, whose architecture is shown in Figure \@ref(fig:nn-1). The categorical inputs go through one-dimensional embedding layers where they are each mapped to a scalar. The embeddings are then concatenated with the numeric predictors, which have been normalized in data pre-processing, before being passed through a feedforward layer (with 8 hidden units and ReLU activation) to \textcolor{blue}{finally} obtain a scalar value between 0 and 1, as constrained by a sigmoid output activation. \textcolor{blue}{Some regularization is applied within this network using the dropout technique of} @srivastava2014dropout \textcolor{blue}{and by early-stopping the fitting of the network by selecting the model weights that relate to the lowest estimated MSE score on a 5\% validation sample.} This scalar output represents the proportion of coverage amount that is paid out, which we then multiply by the dollar amount of the coverage amount to obtain our prediction of the claims paid. For optimization, we use the mean squared error (MSE) loss function.
 
 ```{r nn-1, echo = FALSE, fig.cap = "Architecture of Models 2 and 4.", out.width = "80%", fig.align = "center"}
 knitr::include_graphics("images/nn.pdf")
@@ -398,31 +398,27 @@ In Tables \@ref(tab:embeddings-occupancy-type) and \@ref(tab:embeddings-flood-zo
 
 : (\#tab:embeddings-flood-zone) Excerpt of learned embeddings for `flood_zone` in Model 2.
 
-
 ### Model 3: GLM with Neural Network Embeddings
 
 For Model 3, we return to the GLM, but now we replace the categorical variables with the trained embeddings from Model 2. In other words, our model now contains only continuous variables, and each categorical factor is represented as a scalar value and obtains its own coefficient. In contrast with the number of parameters computed in Equation \@ref(eq:glm1), we have fewer parameters for this model:
 
-
 \begin{equation}
 1 + |J^{\text{num}}| + |J^{\text{cat}}|.
 (\#eq:glm2)
-\end{equation}
-Hence, the model can be written as
+\end{equation} Hence, the model can be written as
 
-
+```{=tex}
 \begin{equation}
 \mu_i = \beta_0 + \sum_{j \in J^{\text{num}}}\beta_{j} x_{i,j} + \sum_{j \in J^{\text{cat}}} \beta_{j} z_{i,j},
 \end{equation}
-
+```
 where $z_{i,j}$ represents the embedding value for $i$th instance of the categorical column $X_j$.
 
 Although, in this particular example, we incorporate one-dimensional embeddings, one can easily include multidimensional embeddings, which would increase the model's flexibility. The modeler would need to balance the potential additional lift with overfitting and some loss of interpretability, since, with one-dimensional embeddings, our GLM structure dictates that there is a monotonic relationship between the predicted response and the input embedding, which could be desirable in certain use cases (and undesirable in others.)
 
 \textcolor{blue}{Regardless of the hyperparameters chosen, care needs to be taken in ensuring the integrity of the model validation process, since when we train the embeddings, we utilize the information from the response variables. Therefore, the holdout data must not be seen by the neural network training process or the GLM fitting process.}
 
-\textcolor{blue}{Since we only have a few parameters in this model, we exhibit the full list of fitted coefficients in Table} \@ref(tab:glm2). 
-\textcolor{blue}{For each categorical variable, there is only one coefficient estimate. This is because each categorical variable has been replaced by a
+\textcolor{blue}{Since we only have a few parameters in this model, we exhibit the full list of fitted coefficients in Table} \@ref(tab:glm2). \textcolor{blue}{For each categorical variable, there is only one coefficient estimate. This is because each categorical variable has been replaced by a
 single scalar value, so we treat it as if it were any other continuous predictor.}
 
 \textcolor{blue}{One interesting ramification of our choice of embedding dimension of 1 in this example is that we can compute the "implied relativities" of the factor levels in the new GLM. Since each level corresponds to a unique scalar value, we can obtain its contribution to the linear predictor by multiplying by the coefficient estimate of the variable. For example, multiplying the estimate of -0.075 for} `occupancy_type` in Table \@ref(tab:glm2) \textcolor{blue}{by each value in Table} \@ref(tab:embeddings-flood-zone), \textcolor{blue}{we obtain the unnormalized contributions of each level, which can then be exponentiated and normalized with respect to the base level} `Single family residence` \textcolor{blue}{in order to obtain the implied relativities, which could then be compared with the first GLM's output in Table} \@ref(tab:relativities).
@@ -484,7 +480,7 @@ knitr::include_graphics("images/occupancy_type_embed.png")
 knitr::include_graphics("images/flood_zone_embed.png")
 ```
 
-For Model 4, the neural network with multi-dimensional embeddings, we would need to treat the learned values before we can plot them. Specifically, we need to reduce the dimension of the data to 2D for embeddings with more than two dimensions. The standard approaches for this are principal component analysis (PCA; @shlens2014tutorial) and t-distributed stochastic neighbor embedding (t-SNE; @Maaten2008a), both of which we illustrate. For a technical review of these methods, refer to Appendix \ref{dim-red].
+For Model 4, the neural network with multi-dimensional embeddings, we would need to treat the learned values before we can plot them. Specifically, we need to reduce the dimension of the data to 2D for embeddings with more than two dimensions. The standard approaches for this are principal component analysis (PCA; @shlens2014tutorial) and t-distributed stochastic neighbor embedding (t-SNE; @Maaten2008a), both of which we illustrate. For a technical review of these methods, refer to Appendix \\ref{dim-red].
 
 In Figure \@ref(fig:flood-zone-pca), we plot the learned embeddings for `flood_zone` in Model 3 on the coordinate system defined by the first two principle components. In our case, however, we are not able to identify discernable clusters in the plot. From inspecting the matrix decomposition results, we see that the cumulative proportion of variance for the first two principal components are just 0.18, which may suggest that perhaps PCA is not the most appropriate dimensionality reduction technique in this case.
 
@@ -492,7 +488,7 @@ In Figure \@ref(fig:flood-zone-pca), we plot the learned embeddings for `flood_z
 knitr::include_graphics("images/flood_zone_pca.png")
 ```
 
-In Figures \@ref(fig:flood-zone-tsne), we display the t-SNE of the learned embeddings for `flood_zone` in Model 3 with various perplexity settings: 2, 3, 5, and 10; the learning rate and the number of steps are fixed at 100 and 10,000, respectively, for all plots. In the first three plots, we can see the semblance of clusters forming. In particular, flood zone D appears in its own cluster, which implies it is far away from other levels in the embedding space, *as seen by the model*. When the perplexity is set to 10 (and beyond), however, we start to lose the geometric properties. While t-SNE is a powerful visualization technique, there are a few points the modeler should be mindful of in practice. We refer the reader to @wattenberg2016how for a more thorough discussion, but stress here that the resulting plot can be very sensitive to the perplexity hyperparameter. In addition, for our use case, which is to explore the learned embeddings, we have fewer data points than most other applications in the literature. Accordingly, our reasonable range of hyperparameter values are adjusted down. 
+In Figures \@ref(fig:flood-zone-tsne), we display the t-SNE of the learned embeddings for `flood_zone` in Model 3 with various perplexity settings: 2, 3, 5, and 10; the learning rate and the number of steps are fixed at 100 and 10,000, respectively, for all plots. In the first three plots, we can see the semblance of clusters forming. In particular, flood zone D appears in its own cluster, which implies it is far away from other levels in the embedding space, *as seen by the model*. When the perplexity is set to 10 (and beyond), however, we start to lose the geometric properties. While t-SNE is a powerful visualization technique, there are a few points the modeler should be mindful of in practice. We refer the reader to @wattenberg2016how for a more thorough discussion, but stress here that the resulting plot can be very sensitive to the perplexity hyperparameter. In addition, for our use case, which is to explore the learned embeddings, we have fewer data points than most other applications in the literature. Accordingly, our reasonable range of hyperparameter values are adjusted down.
 
 ```{r flood-zone-tsne, echo = FALSE, fig.cap="t-SNE plots of learned embeddings of flood zone in Model 4, with various perplexity values. From left to right then top to bottom: 2, 3, 5, and 10.", out.width = "60%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_tsne.png")
@@ -563,13 +559,7 @@ knitr::include_graphics("images/tabt.pdf")
 
 ### Model 7: TabNet
 
-The final model we consider in this subsection is the TabNet architecture. In TabNet, similar to decision trees which 
-it is inspired by, the input features are processed
-sequentually in a number of decision steps. In each decision step, a different subset of features are weighted more
-than the rest based on masks defined by attention modules applied to information from the previous step. The output
-of each step consists of information for the next decision step, and also an output representation that is set aside 
-then aggregated at the end, along with other decision step outputs, in order to product the final model output.
-Due to the complexity, we refer the reader to @Ark2019 for the full architectural details. 
+The final model we consider in this subsection is the TabNet architecture. In TabNet, similar to decision trees which it is inspired by, the input features are processed sequentually in a number of decision steps. In each decision step, a different subset of features are weighted more than the rest based on masks defined by attention modules applied to information from the previous step. The output of each step consists of information for the next decision step, and also an output representation that is set aside then aggregated at the end, along with other decision step outputs, in order to product the final model output. Due to the complexity, we refer the reader to @Ark2019 for the full architectural details.
 
 ## Training and Inference {#training-inference-attn}
 
@@ -583,8 +573,8 @@ In Table \@ref(tab:cv-results-attn), we show the cross-validated performance met
 |:----------------------------------------------------|-------:|-------:|
 | Model 4: MLP with multidimensional embeddings       | 60,973 | 37,574 |
 | Model 5: Simple Attention                           | 60,601 | 36,739 |
-| \textcolor{blue}{Model 6: TabTransformer}                             | 59,900 | 36,343 |
-| \textcolor{blue}{Model 7: TabNet}                                     | 62,938 | 38,386 |
+| \textcolor{blue}{Model 6: TabTransformer}           | 59,900 | 36,343 |
+| \textcolor{blue}{Model 7: TabNet}                   | 62,938 | 38,386 |
 | Linear regression, predictions capped below at 0.01 | 60,879 | 38,431 |
 
 : (\#tab:cv-results-attn) Cross validation results for Models 5-7.
@@ -628,7 +618,6 @@ Several avenues for future research can be considered. One surprising finding of
 
 \appendix
 
-
 # Appendix {.unnumbered}
 
 # Exploratory Data Analysis {#EDA}
@@ -670,6 +659,27 @@ knitr::include_graphics("images/total_building_insurance_coverage.pdf")
 ```{r numdisc, echo = FALSE, fig.cap = "Distribution of the Comunity Rating System Discount covariate", out.width = "60%", fig.align = "center"}
 knitr::include_graphics("images/community_rating_system_discount.pdf")
 ```
+# Finetuning the Neural Network Models
+Here we describe how the neural network models presented in Sections 4 and 5 above were fine-tuned. 
+
+## Models in Section 4
+\textcolor{blue}{
+As noted before, a different 100k subsample of the NFIP dataset was produced for this purpose, and a 5-fold cross-validation scheme was implemented using this data. Two main hyperparameters were tuned for each of Model 2 and Model 4. Two different activation functions (the ReLu and hyperbolic tangent activation functions) and 5 different widths of the hidden layers (8, 16, 32, 64, 128) were tested. The following table shows these results for each of Model 2 and Model 4.}
+
+|  | ReLU/8 | ReLu/16 | ReLu/32 | ReLu/64 | ReLu/128 | tanh/8 | tanh/16 | tanh/32 | tanh/64 | tanh/128 |
+|---|---|---|---|---|---|---|---|---|---|---|
+| Model 2 - RMSE |          60 988  |          60 561  |          60 125  |          60 147  |          59 918  |          61 728  |          60 506  |          60 130  |          59 893  |          60 065  |
+| Model 4 - RMSE |          60 535  |          60 724  |          60 311  |          60 191  |          60 114  |          60 521  |          60 658  |          60 279  |          59 892  |          59 987  |
+| Model 2 - MAE |          36 604  |          36 791  |          36 936  |          37 140  |          36 816  |          37 206  |          36 759  |          36 921  |          37 103  |          37 177  |
+| Model 4 - MAE |          36 828  |          36 824  |          36 780  |          37 054  |          36 672  |          36 528  |          36 725  |          36 483  |          36 766  |          36 394  |
+: Results of fine-tuning models in Section 4.
+
+\textcolor{blue}{It can be observed that the lowest RMSE values are produced using the tanh activation function with a hidden layer width 64 neurons.}
+
+## Models in Section 5
+
+\textcolor{blue}{Models 5 and 6 add an attention-based mechanism to derive contextual embeddings to the models in Section 4. To find optimal hyperparameters, the best performing variation of Model 4 (tanh/64) was taken as a baseline, and the attention mechanisms described for Models 5 and 6 were added to this baseline. Since the performance of the models would ideally improve as a result of adding the attention mechanisms, and, indeed, we see this is the case in the following table, we do not attempt to fine-tune Models 5 and 6 any further.}
+
 
 # Dimensionality Reduction Techniques {#dim-red}
 
@@ -687,36 +697,36 @@ Let $p_{j|i}$ denote the probability that point $x_i$ picks point $x_j$ as its *
 p_{j|i} = \frac{\exp(\norm{x_i - x_j}^2 / 2\sigma_i^2)}{\sum_{k\neq i} \exp(-\norm{x_i - x_k}^2 / 2\sigma_i^2)}, (\#eq:pji)
 \end{equation} where $\sigma_i^2$ denotes the variance of the Gaussian associated with $x_i$. The similarity metric for the original space symmetrizes this conditional probability and is defined as
 
+```{=tex}
 \begin{equation}
 p_{ij} = \frac{p_{j|i} + p_{i|j}}{2n}.
 \end{equation}
-
+```
 On the other hand, in the target space, t-SNE assumes the neighbor selection is driven by a Student t-distribution with one degree of freedom, i.e., a Cauchy distribution. The similarity metric for a pair of points in $\mathcal{Y}$ is then defined as the joint probability
 
-
+```{=tex}
 \begin{equation}
 q_{ij} = \frac{(1 + \norm{y_i - y_j}^2)^{-1}}{\sum_{k \neq l} (1 + \norm{y_k - y_l}^2)^{-1}}.
 \end{equation}
-
+```
 With the similarity metrics defined for each space, we can then state the objective for "closeness" for the sets of points, which is the Kullback--Leibler divergence from Q to P:
 
-
+```{=tex}
 \begin{equation}
 D_{KL}(P || Q) = \sum_{i \neq j} p_{ij} \log \frac{p_{ij}}{q_{ij}}. (\#eq:tsne-obj)
 \end{equation}
-
+```
 We now circle back to Equation \@ref(eq:pji) and discuss $\sigma_i$. The variance of the Gaussian is allowed to vary depending on where the point is in the space; specifically, it should reflect the density or sparsness of surrounding points. To train this parameter, t-SNE introduces a hyperparameter, *perplexity*, which is a scalar value set by the user, and is defined as
 
 \begin{equation}
 Perp(P_i) = 2^{H(P_i)},
-\end{equation}
-where $H(P_i)$ denotes the entropy of $P_i$,
+\end{equation} where $H(P_i)$ denotes the entropy of $P_i$,
 
-
+```{=tex}
 \begin{equation}
 H(P_i) = -\sum_j p_{j|i}\log_2 p_{j|i},
 \end{equation}
-
+```
 and $P_i$ is the Gaussian parameterized by $x_i$ and $\sigma_i$. During training, t-SNE looks for $P_i$ that have perpelxity corresponding to the user input. Finally, the objective as stated in Equation \@ref(eq:tsne-obj) is differentiable, and is trained via gradient descent.
 
 \clearpage
