--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -259,7 +259,7 @@ Several different approaches to applying attention within the modeling of tabula
 ```
 where $X' \in \mathbb{R}^{q \times d}$ is the matrix of embeddings after concatenating $q$ embeddings of dimension $d$ together, $X^*$ represents the matrix of embeddings $X'$ after processing with attention and $A$ is the attention function defined in Equations \ref{eq:attention} - \ref{eq:attention_output}. Below, we demonstrate the effect of adding this simple application of attention to a tabular model.
 
-@Huang2020 refines this approach in a model they call the TabTransformer, which implements two main changes to the approach shown in Equations \ref{eq:embed_to_attn_to_nn}. The first of these is that, instead of using the matrix of embeddings after processing with self-attention ($X'$) directly in the model, the output of a Transformer model is used instead. The second of these refinements is that for each of the $q$ covariates with an embedding in the matrix $X'$, we include a new row embedding which denotes which covariate each embedding relates to. Thus, in the TabTransformer model, we augment the embedding matrix with extra columns, so that the dimension of this matrix is $q \times (d + d_{col})$, where $d_{col}$ is the dimension of the row embedding. @Huang2020 find that including this identifier improves the performance of the model. We compare the results of the TabTransformer model to the other models tested below.
+@Huang2020 refines this approach in a model they call the TabTransformer, which implements two main changes to the approach shown in Equations \ref{eq:embed_to_attn_to_nn}. The first of these is that, instead of using the matrix of embeddings after processing with self-attention ($X'$) directly in the model, the output of a Transformer model is used instead. The second of these refinements is that for each of the $q$ covariates with an embedding in the matrix $X'$, we include a new row embedding which denotes which covariate each embedding relates to. Thus, in the TabTransformer model, we augment the embedding matrix with extra columns, so that the dimension of this matrix is $q \times (d + d_{col})$, where $d_{col}$ is the dimension of the row embedding. @Huang2020 find that including this identifier improves the performance of the model. We compare the results of the TabTransformer model to the other models tested below. \textcolor{blue}{We refer the reader to Section \ref{attention_models} below where the TabTransformer model is shown diagramatically.} 
 
 Finally, a different way of incorporating attention into the modeling of tabular data has been proposed by @Ark2019, who refer to their model as TabNet. In summary, the main idea of the TabNet model is to try emulate the excellent performance of decision trees on tabular data modeling using deep neural networks. This is done by structuring the neural networks to emulate a key aspect of decision tree modeling, which is the efficient selection of relevant covariates for the model task. Within TabNet, an attention based model is used to select features by estimating attention scores for each covariate within $X$. The covariates are multiplied by the attention scores to down-weight less relevant features for the prediction problem. Other less important details of the TabNet model are given in @Ark2019.
 
@@ -298,9 +298,9 @@ knitr::kable(
 
 The response variable we take from the dataset is "Amount Paid on Building Claim", which is a numeric variable.
 
-For our experiments, we set up a 5-fold cross validation scheme that is applied to each of the models we introduce. In Sections \ref{models} and \ref{interpretation}, the tables and figures are based on a single fold of the cross validation split. In Section \ref{training-inference}, we provide the cross-validated performance metrics of each of the models.
+For our experiments, we set up a 5-fold cross-validation scheme that is applied to each of the models we introduce. In Sections \ref{models} and \ref{interpretation}, the tables and figures are based on a single fold of the cross validation split. In Section \ref{training-inference}, we provide the cross-validated performance metrics of each of the models.
 
-\textcolor{blue}{Whereas the main focus of our contribution} is on applications of categorical embeddings in predictive modeling, \textcolor{blue}{we have fine-tuned the neural network models in this (and the next) sections using the same 5-fold cross validation scheme described above, but applied to a separate 100k data point subsample of the FEMA data. The results of this fine-tuning are reported in detail in the appendix. The performance metrics in this, and the next, section are based on the optimal models found through this process. Our aim is to show that performant predictive models utilizing categorical embeddings can be developed quite easily, and that these models can be enhanced using suitable architectures utilizing attention mechanisms. As we describe the modeling procedure and results, we provide further commentary on recommended practices in practical applications, especially with respect to the neural network models.}
+\textcolor{blue}{Whereas the main focus of our contribution} is on applications of categorical embeddings in predictive modeling, \textcolor{blue}{we have fine-tuned the neural network models in this (and the next) sections using the same 5-fold cross validation scheme described above, but applied to a separate 100k data point subsample of the NFIP data. The results of this fine-tuning are reported in detail in the appendix and this separate subsample of the NFIP data is not used for any other purpose in this study. The performance metrics in this, and the next, section are based on the optimal models found through this process. Our aim is to show that performant predictive models utilizing categorical embeddings can be developed quite easily, and that these models can be enhanced using suitable architectures utilizing attention mechanisms. As we describe the modeling procedure and results, we provide further commentary on recommended practices in practical applications, especially with respect to the neural network models.}
 
 ## Models {#models}
 
@@ -482,7 +482,7 @@ knitr::include_graphics("images/flood_zone_embed.png")
 
 For Model 4, the neural network with multi-dimensional embeddings, we would need to treat the learned values before we can plot them. Specifically, we need to reduce the dimension of the data to 2D for embeddings with more than two dimensions. The standard approaches for this are principal component analysis (PCA; @shlens2014tutorial) and t-distributed stochastic neighbor embedding (t-SNE; @Maaten2008a), both of which we illustrate. For a technical review of these methods, refer to Appendix \ref{dim-red}.
 
-In Figure \@ref(fig:flood-zone-pca), we plot the learned embeddings for `flood_zone` in Model 3 on the coordinate system defined by the first two principle components. In our case, however, we are not able to identify discernable clusters in the plot. From inspecting the matrix decomposition results, we see that the cumulative proportion of variance for the first two principal components are just \textcolor{blue}{0.38, which is a relatively low proportion,} suggesting that perhaps PCA is not the most appropriate dimensionality reduction technique in this case.
+In Figure \@ref(fig:flood-zone-pca), we plot the learned embeddings for `flood_zone` in Model 3 on the coordinate system defined by the first two principle components. In our case, however, we are not able to identify discernable clusters in the plot. From inspecting the matrix decomposition results, we see that the cumulative proportion of variance for the first two principal components are just \textcolor{blue}{0.38, which is a relatively low proportion,} suggesting that perhaps PCA is not the most appropriate dimensionality reduction technique in this case.  \textcolor{blue}{Additionally, this indicates that each of the dimensions of the calibrated embeddings are important, implying that the embedding has been well calibrated.} 
 
 ```{r flood-zone-pca, echo = FALSE, fig.cap="First two principal components of learned embeddings of flood zone in Model 4.", out.width = "50%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_pca.png")
@@ -496,7 +496,7 @@ knitr::include_graphics("images/flood_zone_tsne.png")
 
 ## Training and Inference {#training-inference}
 
-For the GLMs, Models 1 and 3, we follow the standard optimization procedure using iteratively reweighted least squares (IWLS) without regularization. For the neural networks, Models 2 and 4, we utilize the \texttt{Adam} optimizer [@Kingma2014] with a learning rate of \textcolor{blue}{0.001 and a minibatch size of 1024. We split the training set into analysis and assessment sets, containing} 80% and 20% \textcolor{blue}{of the rows, respectively, and further select a} 5% \textcolor{blue}{sample of the training set as a validation set to estimate the out of sample performance of each model. We train on the analysis set for a maximum of 150 epochs, and select the best model from the 150 epochs as measured by the validation. Finally, as mentioned above, in addition to this form of early stopping, we also apply the sropout technique with a rate of dropout of} 2.5\%.
+For the GLMs, Models 1 and 3, we follow the standard optimization procedure using iteratively reweighted least squares (IWLS) without regularization. For the neural networks, Models 2 and 4, we utilize the \texttt{Adam} optimizer [@Kingma2014] with a learning rate of \textcolor{blue}{0.001 and a minibatch size of 1024. Using a five-fold cross-validation approach, we split the dateset into analysis and assessment sets, containing} 80% and 20% \textcolor{blue}{of the rows, respectively, and further select a} 5% \textcolor{blue}{sample of the analysis set as a validation set to estimate the out of sample performance of each model. This is repeated five times on non-overlapping subsets of the dataset. For each of these five splits of the data, we train on the analysis set for a maximum of 150 epochs, and select the best model from the 150 epochs as measured by the validation set. Finally, as mentioned above, in addition to this form of early stopping, we also apply the dropout technique with a rate of dropout of} 2.5\%.
 
 During inference, or scoring, care must be taken to accommodate the categorical levels that are unseen during training. While we allow for an extra key in the embedding dictionary, the initial weights are not updated during training, which could lead to nonsensical predictions in the validation or test sets. To circumvent this issue, before applying the trained model but after the final optimization epoch, we update the weights for the unseen levels manually. In practice, a common approach is to take an average value of some sort of the weights of the other levels. In our case, we take the median (if there are multiple, the lower of the two), but a mean, mean weighted by frequency of observations, or trimmed mean could be used.
 
@@ -613,6 +613,11 @@ To investigate the predictive value added by the contextual embeddings, a simple
 This study has focused on how embeddings can be applied within the context of actuarial modeling, by illustrating a range of approaches: first, relatively simple neural networks with embeddings were defined, the embeddings from these models were reused within traditional GLM models and, finally, more advanced attention based models were studied. These models were demonstrated within the context of a claims severity modeling problem based on data from the NFIP. Whereas we have only considered severity in this study, it is likely that our findings will replicate for the modeling of claim frequency, which is usually an easier problem. Our key findings are that processing categorical variables with multi-dimensional embeddings leads to enhanced performance within simple neural networks, and that, by including these within traditional GLM models, the predictive performance of these models can be enhanced, compared to the usual encoding scheme for categorical variables. Some of the attention based models considered within this study performed well, in particular, the TabTransformer model of @Huang2020 appears quite promising for use in actuarial modeling. The study has also illustrated how embeddings can be visualized using the PCA and t-SNE techniques. We found that, in the case of the NFIP data, it is possible to explain which variables modify the embeddings based on the context of each observation.
 
 Several avenues for future research can be considered. One surprising finding of our work is that the TabNet model performed quite poorly, leading us to conclude that this model appears to be less suitable for actuarial modeling. Understanding these findings in more detail would be a valuable contribution to the literature. Another helpful contribution would be to investigate the optimal hyperparameters for the TabTransformer model in the context of actuarial modeling. Finally, extending our findings to a claims frequency example could be considered.
+
+Acknowledgments {.unnumbered}
+==========
+
+We thank the two anonymous reviewers for their helpful comments which significantly improved the manuscript.
 
 \clearpage
 
